# mcp-builder-toolkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NEXT_STEPS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/reviews/: generated-artifacts.md  release-steward.md  scope-contract.md  security-supply-chain.md
.agents/schemas/: review-result.schema.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  DISCUSSION_TEMPLATE.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  coverage-badge.yml  labeler.yml  pr-lint.yml  release-drafter.yml  release.yml  security.yml  stale.yml  wiki-sync.yml
.specify/memory/: constitution.md
docs/: architecture.md  ecosystem-roadmap.md  extending.md  future-runtime-governance.md  guided-quickstart.md  pilot-evidence.md  pilot-feedback.md  product-strategy.md  release-notes-0.1.0.md  release-notes-0.1.0a3.md  release-notes-0.1.0a4.md  release-notes-0.1.0a5.md  release-notes-0.1.0a7.md  release-readiness-plan.md  schema-freeze-v1alpha1.md  threat-model.md  yaml-capabilities.md
docs/adr/: 0001-fastmcp-python-first.md  0002-manifest-is-project-intent.md  0003-user-owned-generated-code.md  0004-governance-deferred.md  template.md
scripts/: bump_version.py  export_manifest_schema.py  update_coverage_badge.py  update_golden.py
specs/001-core-builder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  traceability.md
specs/001-core-builder/checklists/: requirements.md
specs/001-core-builder/contracts/: cli-contract.md  diagnostics.schema.json  manifest.example.yaml  manifest.schema.json
specs/002-capability-scaffolding/: spec.md
specs/003-server-verification/: spec.md
specs/004-profile-upgrades/: spec.md
src/mcp_builder/: __init__.py  service.py
src/mcp_builder/cli/: app.py  exit_codes.py  output.py
src/mcp_builder/cli/commands/: doctor.py  generate.py  init.py  validate.py
src/mcp_builder/domain/: __init__.py  artifacts.py  diagnostics.py  project.py
src/mcp_builder/features/: __init__.py
src/mcp_builder/features/compose/: __init__.py
src/mcp_builder/features/docker/: __init__.py
src/mcp_builder/features/github_actions/: __init__.py
src/mcp_builder/generation/: __init__.py  interfaces.py  lock.py  planner.py  renderer.py  state.py  transaction.py
src/mcp_builder/manifest/: __init__.py  loader.py  models.py  normalize.py  paths.py  schema.py
src/mcp_builder/targets/: __init__.py  compatibility.py
src/mcp_builder/targets/fastmcp_python/: __init__.py  adapter.py
src/mcp_builder/targets/fastmcp_python/templates/: README.md.j2  env.example.j2  pyproject.toml.j2
src/mcp_builder/targets/fastmcp_python/templates/package/: __init__.py.j2  server.py.j2
src/mcp_builder/targets/fastmcp_python/templates/package/tools/: __init__.py.j2  example.py.j2
src/mcp_builder/targets/fastmcp_python/templates/tests/: test_example_tool.py.j2  test_server_smoke.py.j2
tests/: conftest.py  test_cli.py  test_cli_app.py  test_distribution.py  test_doctor.py  test_edge_cases.py  test_exit_codes.py  test_features_http_docker.py  test_force_managed.py  test_generated_project.py  test_generation.py  test_golden.py  test_invalid_fixtures.py  test_lock.py  test_manifest.py  test_mcp_smoke.py  test_properties.py  test_quickstart.py  test_schema_export.py  test_security.py
tests/fixtures/invalid/: 01-bad-api-version.yaml  02-bad-name.yaml  03-compose-without-docker.yaml  04-unknown-profile.yaml  05-path-traversal-http.yaml  expected.json
tests/golden/: http-docker.manifest.yaml  http-docker.paths.txt  stdio-minimal.manifest.yaml
tests/golden/http-docker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
tests/golden/http-docker/.github/workflows/: ci.yml
tests/golden/http-docker/src/http_docker_golden/: __init__.py  server.py
tests/golden/http-docker/src/http_docker_golden/tools/: __init__.py  example.py
tests/golden/http-docker/tests/: test_example_tool.py  test_server_smoke.py
tests/golden/stdio-minimal/: .env.example  README.md  pyproject.toml
tests/golden/stdio-minimal/.github/workflows/: ci.yml
tests/golden/stdio-minimal/src/golden_stdio/: __init__.py  server.py
tests/golden/stdio-minimal/src/golden_stdio/tools/: __init__.py  example.py
tests/golden/stdio-minimal/tests/: test_example_tool.py  test_server_smoke.py
