[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "http-docker-golden"
version = "0.1.0"
description = "MCP server for http-docker-golden"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
dependencies = [
  "fastmcp>=3.4.4,<3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
]

[project.scripts]
http-docker-golden = "http_docker_golden.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/http_docker_golden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["http_docker_golden"]
mypy_path = "src"
strict = true
